# zoo_vision

./: .gitignore  CMakeLists.txt  activate_ros.sh  commands.md  dataset.xml  install_deps.sh  make_env.sh  method.md  project_root.py  pyrightconfig.json  requirements.txt
clean_nas_empty_videos/: README.md
clean_nas_empty_videos/scripts/: DELETE_SCANNED_EMPTY.sh  daily_scan_cron.sh  migrate_output_structure.py  rescan_all.sh  run_cli_historical_scan.sh  run_direct_scan.sh
data/: config-.json  config.json
db/: data_from_tracks.py  dummy_data_from_tracks.py  schema.sql  schema.txt  summarize_observations.py
game/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
game/app/: globals.css  layout.tsx  page.tsx
game/backend/: config.py  detection.py  galaxy.py  main.py  reid.py
game/lib/: api.ts  data.ts  elephants.ts  types.ts
game/scripts/: generate_game_data.py
labeller/: __main__.py  background_segmenter.py  database.py  main_window.py  mark_canvas.py  motion_detector.py  motion_detector_ui.py  names.json  serialization.py  side_menu.py
labelling/common/: drawing.py  image_label.py  names.json  sam2_processor.py  utils.py
labelling/image_labeller/: __main__.py  background_segmenter.py  database.py  main_window.py  serialization.py
labelling/video_labeller/: __main__.py  background_segmenter.py  database.py  drawing.py  help.py  image_label.py  main_window.py  motion_detector.py  sam2_processor.py  serialization.py  side_menu.py  utils.py
post_processing/: MODEL_TRAINING.md  README.md  utils.py
post_processing/analysis/: active_reid.py  activity_budget_analysis.py  activity_budget_analysis_per_day.py  analyze_id_accuracy.py  analyze_lateral_sleeping.py  analyze_semi_gt.py  evaluate_behavior.py  trajectory_heatmap.py  utils.py
post_processing/core/: __init__.py  behavior_inference.py  cross_cam_id_stitching.py  cross_cam_matching.py  file_manager.py  id_matching_cross_cam.py  online_tracker.py  post_processor.py  reid_inference.py  stitching.py  temporal_smooth.py  tracklet_manager.py  within_video_stitching.py
post_processing/tests/: run_behavior_test.sh  run_reid_evaluation.sh  run_vis.sh  test_behavior_inference.py  test_reid_evaluation.py  validate_stitching_timeline.py  visualize_overlay_on_raw_videos.py
post_processing/tools/: clustering.py  extract_features_single_cam.py  extract_tracklets.py  extract_tracklets_and_features.py  offline_extract_features_single_cam.py  offline_post_processing_full_night.py  parse_room_gts.py  reranking.py  run_behavior_analysis.py  run_feature_extraction_id_behavior.py  run_online_tracking.py  run_post_processing copy.py  run_post_processing.py  run_post_processing_full_night.py  run_reid_feature_extraction.py  stitch_id_cross_cams.py  utils.py  videoloader.py  visualization.py
scripts/: cf_matrix.py  live_cameras.py  make_rr_blueprint.py  model_serialization.py  rerun_playground.ipynb
scripts/calibration/: calib_utils.py  select_polygon.ipynb
scripts/datasets/: browse_annotationsy.ipynb  browse_dataset.ipynb  browse_id_dataset.ipynb  build_coco.ipynb  (+21 more)
src/zoo_vision/: CMakeLists.txt  package.xml
src/zoo_vision/launcher/: run_zoo_vision.sh.in  run_zoo_vision_ui.sh.in  start_live_capture.sh.in  zoo_vision.desktop.in  zoo_vision_ui.desktop.in
src/zoo_vision/src/: behaviourer.cpp  behaviourer.hpp  behaviourer_fake.cpp  behaviourer_fake.hpp  behaviourer_interface.cpp  behaviourer_interface.hpp  camera_calibration.cpp  camera_calibration.hpp  camera_pipeline.cpp  camera_pipeline.hpp  compute_device.cpp  compute_device.hpp  db_forwarder.cpp  identifier.cpp  identifier.hpp  identifier_fake.cpp  identifier_fake.hpp  identifier_interface.cpp  identifier_interface.hpp  image_embedder.cpp  image_embedder.hpp  image_normalizer.cpp  image_normalizer.hpp  image_quality.cpp  image_quality.hpp  image_queue.cpp  image_queue.hpp  image_rate_limiter.cpp  image_rate_limiter.hpp  json_eigen.cpp  keyframe_store.cpp  keyframe_store.hpp  main.cpp  main2.cpp  patch_cropper.cpp  patch_cropper.hpp  profiler.cpp  profiler.hpp  profiler_log_node.cpp  profiler_log_node.hpp  (+33 more)
src/zoo_vision_rs/: Cargo.toml  package.xml
src/zoo_vision_rs/src/: rerun_forwarder.rs  zoo_config.rs  zoo_vision_rs.rs
training/: compile_all_models.py
visualization/: analyze_empty_frames.py  analyze_reid_gt.ipynb  behavior_analysis.py  behavior_analysis_streamlit.py  comparison.py  detect_empty.sh  detect_empty_frames.py  offline_stitching.py  optimized_track_behavior.py  run.sh  run_behavior_analysis.sh  run_multi_camera.py  run_offline_stitching.sh  run_pipeline.sh  run_visualize_stitched.sh  tracklet_extraction.py  utils.py  video_id_classification.py  video_reid.py  video_tracks.py  video_tracks_reid.py  video_tracks_reid_improved.py  video_tracks_reid_improved_with_behavior.py  visualize_stitched_tracks.py  visualize_video_reid.py
zoo_vision_ros2/src/zoo_msgs/: CMakeLists.txt
zoo_vision_ros2/src/zoo_msgs/msg/: BoundingBox2D.msg  Detection.msg  Image.msg  TrackClosed.msg  TrackState.msg
zoo_vision_ros2/src/zoo_vision/: CMakeLists.txt
zoo_vision_ros2/src/zoo_vision/include/zoo_vision/: identifier.hpp  rerun_forwarder.hpp  segmenter.hpp  stats.hpp  utils.hpp
zoo_vision_ros2/src/zoo_vision/src/: behaviourer.cpp  camera_pipeline.cpp  camera_pipeline.hpp  db_forwarder.cpp  db_forwarder.hpp  identifier.cpp  identifier.hpp  image_embedder.hpp  image_normalizer.hpp  image_quality.hpp  image_queue.hpp  json_eigen.hpp  keyframe_store.cpp  keyframe_store.hpp  main.cpp  patch_cropper.cpp  patch_cropper.hpp  rerun_forwarder.cpp  rerun_forwarder.hpp  segmenter.cpp  segmenter.hpp  segmenter_interface.hpp  segmenter_yolo.cpp  segmenter_yolo.hpp  stats.cpp  timings.hpp  track_matcher.cpp  track_matcher.hpp  types.hpp  utils.cpp  utils.hpp  video_loader.cpp  video_loader.hpp  vote_histogram.cpp  vote_histogram.hpp  world_locator.cpp  world_locator.hpp  zoo_camera.cpp  zoo_camera.hpp
zoo_vision_ros2/src/zoo_vision_rs/: Cargo.toml
zoo_vision_ros2/src/zoo_vision_rs/src/: rerun_forwarder.rs  zoo_config.rs  zoo_vision_rs.rs
(+281 files in other folders)
