[package]
name = "zoo_vision_rs"
version = "0.1.0"
authors = ["Daniel Herrera C <daniel.herrera.castro@gmail.com>"]
edition = "2021"

[lib]
name = "zoo_vision_rs"
path = "src/zoo_vision_rs.rs"
crate-type = ["staticlib"]

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
builtin_interfaces = "*"
standard_paths = "*"
image = "*"
serde = "*"
serde_derive = "*"
serde_json = "*" 
nalgebra = "*"
hex_color = {version = "3", features = ["rand", "std", "serde"]}
rerun = {version = "0.22.1", features = ["web_viewer"]}
re_ws_comms = {version = "0.22.1"}
time = "*"


[dependencies.rclrs]
version = "0.4"

[dependencies.rosidl_runtime_rs]
version = "0.4"

[dependencies.sensor_msgs]
version = "*"

[dependencies.zoo_msgs]
version = "*"

[dependencies.libc]
version = "*"